tests/negative/missing-import.hs
-- EXPECT-ERROR: File not found in load-path
import ReWire
import NoSuchModuleXYZ

start :: Integer
start = 0

main = undefined
